# gameserver-ctrl

./: pyproject.toml
src/config/: settings.toml
src/gameserver_ctrl/: constants.py  test.py
src/gameserver_ctrl/core/: __init__.py  config.py
src/gameserver_ctrl/domain/: __init__.py
src/gameserver_ctrl/domain/minecraft/: __init__.py  schemas.py  server_gen.py
src/gameserver_ctrl/utils/: __init__.py
src/gameserver_ctrl/utils/jinja_utils/: __init__.py  operations.py
src/templates/minecraft/dotenv/: template_compose_forge_mod_dotenv.j2
src/templates/minecraft/json/: template_server_whitelist.j2
src/templates/minecraft/scripts/bash/: template_recreate_server_sh.j2
src/templates/minecraft/server_containers/forge_server/: template_docker-compose.j2
