[project]
name = ""
version = ""
description = ""
authors = [{ name = "redjax", email = "jackenyon@gmail.com" }]
dependencies = [
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "dynaconf>=3.2.4",
    "red-utils>=0.2.7",
    "loguru>=0.7.2",
    "msgpack>=1.0.7",
    "faker>=19.13.0",
    "diskcache>=5.6.3",
    "httpx>=0.25.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["black>=23.10.1", "ruff>=0.1.4", "pytest>=7.4.3"]

[tool.pdm.scripts]

###############
# Format/Lint #
###############

lint = { shell = "pdm run ruff check . --fix && pdm run black ." }
# Check only, don't fix
check = { cmd = "black ." }
# Check and fix
format = { cmd = "ruff check . --fix" }

######################
# Export Requirement #
######################

#  Export production requirements
export = { cmd = "pdm export --prod -o requirements.txt --without-hashes" }
#  Export only development requirements
export-dev = { cmd = "pdm export -d -o requirements.dev.txt --without-hashes" }
## Uncomment if/when using a CI group
# export-ci = {cmd = "pdm export -G ci -o requirements.ci.txt --without-hashes"}
